--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   margin-right: 20px;
   text-decoration: none;
   color: #000;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 /* Titre au centre */
@@ -274,36 +274,137 @@ figcaption {
   font-style: italic;
 }
 
-/* Pictogrammes */
-.pictos {
-  font-size: 2em;
-  color: #555;
+.galerie {
   display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-bottom: 40px;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
-/* Réinitialisation de base */
+figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px; /* tu peux ajuster */
+  text-align: center;
+}
+
+.valeur-img {
+  width: 200px;
+  height: 300px;
+  border-radius: 0px;
+}
+
+.picto {
+  width: 40px; /* ou la taille souhaitée */
+  height: auto;
+  margin: 10px 0;
+}
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Section contenant les images */
-.photos-histoire {
+body {
+  font-family: sans-serif;
+}
+
+/* Section avec deux images */
+.double-image {
   display: flex;
-  width: 100px;
-  height: 100px;
+  width: 100%;
 }
 
 /* Chaque image prend 50% de la largeur */
-.half-image {
-  width: 100px;
-  height: 100px;
+.img-half {
+  width: 50%;
+  height: auto;
   object-fit: cover;
   display: block;
 }
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
+  background-color: #f8f4ec;
+  color: #000;
+}
 
+.my_class_0047 {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+  background-color: #f8f4ec;
+  flex-wrap: wrap;
+  font-family: 'figtree';
+}
+
+.footer-left ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+ 
+.footer-left ul li {
+  margin-bottom: 10px;
+}
+
+.footer-left ul li a {
+  text-decoration: underline;
+  color: #000;
+  font-size: 18px;
+}
+
+.social-icons a {
+  margin-right: 15px;
+}
+
+.social-icons img {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+}
+
+.footer-right {
+  max-width: 400px;
+}
+
+.footer-right p {
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+
+.footer-right form {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-right input {
+  padding: 15px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+.footer-right button {
+  padding: 15px;
+  font-size: 18px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.credits {
+  font-style: italic;
+  margin-top: 20px;
+}
+
+.credits a {
+  text-decoration: underline;
+  color: inherit;
+}
 
